--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,15 @@
 .App {
   text-align: center;
+  background-image: url(./image/videogame.jpg);
+  overflow: hidden;
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+  color: azure;
+  font-family:'Courier New', Courier, monospace;
 }
+
 
 .App-logo {
   height: 40vmin;
