--- a/client/src/components/CreateVideogame/CreateVideogame.css
+++ b/client/src/components/CreateVideogame/CreateVideogame.css
@@ -1,40 +1,104 @@
-.divAddAll{
-    border: 1px solid yellow;
+.divTot{
+    background-image: url(../../image/fondocreate.png);
+    overflow: hidden;
+    min-height: 100vh;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+}
+
+.divCont{
+    /* border: 1px solid rgb(255, 0, 221); */
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 90%;
+    box-sizing: border-box;
+    margin: 0% 5% 0% 5%;
+}
+
+
+.divNew{
+    /* border: 1px solid rgb(0, 255, 42); */
+    width: 50%;
+    height: 50%;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    width: 40%;
-    margin: 5% 30% 2% 30%;
+    flex-wrap: wrap;
+}
+
+.divAddAll{
+    border: 1px solid rgb(55, 0, 255);
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    margin: 3% 20% 1% 20%;
     height: 60%;
-    background-color:rgba(240, 255, 255, 0.062);
+    background-color: rgba(0, 0, 0, 0.918);
     border-radius: 2%;
+    box-shadow: 2px 2px 10px 2px rgba(226, 3, 96, 0.671);
 }
 
 .box{
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
+    /* border: 1px solid rgb(0, 255, 191); */
+    margin-top: 0%;
+    margin-bottom: 3%;
+}
+
+.inputPlat{
+    width: 100%;
+
 }
 
 .checkbox{
-    width: 50%;
+    /* border: 1px solid rgb(0, 255, 42); */
+    width: 33%;
     display: flex;
     flex-wrap: wrap;
-    margin-top: 0px;
-    align-items: baseline;
+    box-sizing: border-box;
+    align-items:flex-start;
+    justify-content: center;
+    margin: 1% 0% 1% 0%;
+    font-size: 90%;
 }
 
 .label{
-    width: 20%;
+    width: 30%;
     margin-left: 2%;
+    letter-spacing: 1px;
+    text-decoration: underline;
+    text-shadow:  2px 0px 4px rgb(153, 0, 255);
+}
+
+.selectGenre{
+    background-color: transparent;
+    color: white;
+    border-radius: 5%;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.labelGenre{
+    width: 30%;
+    margin-left: 2%;
+    letter-spacing: 1px;
+    text-decoration: underline;
+    text-shadow:  2px 0px 4px rgb(153, 0, 255);
+    background-color:rgba(0, 0, 0, 0.877);
 }
 
 .divAddVideogame{
-    
+    text-shadow:  2px 0px 10px rgb(255, 0, 0);
+    font-weight: bold;
 }
 
 .divNameAdd{
     display: flex;
     flex-wrap: nowrap;
-    
+    /* border: 1px solid yellow; */
     width: 100%;
     text-align: left;
 }
@@ -45,12 +109,13 @@
     margin-top: 10px;
     width: 100%;
     text-align: left;
+    /* border: 1px solid yellow; */
 }
 
 .divReleasedAdd{
     display: flex;
     flex-wrap: nowrap;
-    
+    /* border: 1px solid yellow; */
     width: 100%;
     text-align: left;
     margin: 10px 0px 10px 0px;
@@ -59,17 +124,22 @@
 .divRatingAdd{
     display: flex;
     flex-wrap: nowrap;
-    
+    /* border: 1px solid yellow; */
     width: 100%;
     text-align: left;
 }
 
 .divPlatformsAdd{
     display: flex;
-    flex-wrap: nowrap;
-    
+    flex-wrap: wrap;
+    border-radius: 3%;
+    padding-top: 2%;
+    border: 1px solid rgba(255, 0, 0, 0.178);
+    box-shadow: 2px 2px 10px 2px rgba(155, 3, 226, 0.479);
     width: 100%;
-    margin: 10px 0px 10px 0px;
+    box-sizing: border-box;
+    justify-content: center;
+    background-color:rgba(0, 0, 0, 0.507);
 }
 
 .divGenresAdd{
@@ -77,12 +147,15 @@
     flex-wrap: wrap;
     width: 100%;
     text-align: left;
+    /* border: 1px solid yellow; */
+    margin-top: 10px;
 }
 
 .divDescriptionAdd{
-    
+    /* border: 1px solid yellow; */
     text-align: left;
     margin: 10px 0px 10px 0px;
+    width: 100%;
 }
 
 .buttonAdd{
@@ -147,16 +220,29 @@
     margin-left: 5%;
     margin-right: 5%;
     margin-top: 5px;
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.37);
+    border-radius: 1%;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .errors{
-    font-size: 15px;
+    font-size: 13px;
     color: red;
     border-color: 1px solid white;
+    margin: 0%;
 }
 
 .danger{
-    border: 1px solid red;
+    /* background-color: rgba(187, 12, 12, 0.219); */
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.37);
+    border-radius: 8%;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .linkAdd{
@@ -185,7 +271,7 @@
 .deleteGenres{
     width: auto;
     height:auto;
-    font-size: 100%;
+    font-size: 60%;
     text-align: center;
     justify-content: center;
     background-color: rgba(255, 0, 0, 0.438);
