--- a/client/src/components/Videogame/Videogame.css
+++ b/client/src/components/Videogame/Videogame.css
@@ -1,63 +1,92 @@
 .divGame{
     display: flex;
     justify-content: space-around;
-    width: 230px;
-    height: 330px;
-    background-color: rgba(97, 96, 96, 0.349);
-    border-radius: 15px;
-    margin: 25px;
+    width: 20%;
+    height: auto;
+    padding-bottom: 3%;
+    background-color: rgba(0, 0, 0, 0.918);
+    margin: 2% 2% 2% 2%;
     text-decoration: none;
-    box-shadow: 2px 2px 2px  rgba(204, 226, 3, 0.74);
+    box-shadow: 2px 2px 10px 2px rgba(3, 163, 226, 0.671);
+    border: 1px solid rgb(253, 7, 241);
+    box-sizing: border-box;
+    border-radius: 5%;
 }
 
 .img{
-    width: 230px;
-    height: 150px;    
+    width: 100%;
+    height: 40%;
+    /* border: 1px solid rgb(114, 139, 250); */
+    box-sizing: border-box;
 }
 
 .link{
     text-decoration: none;
+    box-sizing: border-box;
 }
 
 .h3{
-    font-size: 19px;
-    margin-top: 15px;
-    color: yellow;
-    height: 40px;
+    width: auto;
+    font-size: 120%;
+    font-weight: bold;
+    margin: 5% 5% 0% 5%;
+    color: rgb(255, 255, 255);
+    height: 20%;
     text-align: center;
+    /* border: 1px solid rgb(201, 20, 0); */
+    text-shadow:  2px 0px 10px rgb(162, 0, 255);
+    box-sizing: border-box;
+    justify-content: baseline;
 }
 
 .h5Game{
-    margin-top: 5px;
-    font-size: 15px;
-    margin-bottom: 3px;
-    margin-left: 25px;
-    text-align: left;
-    width: 80%;
+    margin-top: 2%;
+    margin-bottom: 3%;
+    font-size: 105%;
+    text-align: center;
+    width: 100%;
+    /* border: 1px solid rgb(43, 223, 7); */
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
 }
 
 .genres{
-    margin-top: 0px;
-    margin-bottom: 0px;
-    font-size: 13px;
-    margin-left: 10px;
-    text-align: left;
+    font-size: 80%;
+    width: 100%;
+    /* border: 1px solid rgb(118, 0, 148); */
+    box-sizing: border-box;
+    margin: 0%;
+    text-shadow:  2px 0px 10px rgb(255, 0, 0);
 }
 
 .divGenres{
+    margin-top: 3%;
     width: 50%;
+    height: auto;
+    flex-wrap: wrap;
     float: left;
+    /* border: 1px solid rgb(114, 250, 243); */
+    box-sizing: border-box;
+    align-items: center;
 }
 .divRating{
+    margin-top: 3%;
     width: 50%;
     float: right;
     text-align: center;
+    /* border: 1px solid salmon; */
+    box-sizing: border-box;
 }
 
 .numRating{
-    color: white;
+    color: rgb(255, 255, 255);
     font-weight: bold;
     text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    /* border: 1px solid rgb(255, 254, 253); */
+    box-sizing: border-box;
+    text-shadow:  2px 0px 10px rgb(251, 255, 0);
 }
 
 .star{
