--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-image: url(./image/fondohome.png);
+  background-image: url(./image/landings.jpg);
   overflow: hidden;
   min-height: 100vh;
   background-repeat: no-repeat;
