--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -13,6 +13,9 @@
 	justify-content: space-evenly;
 	box-shadow: inset;
 	box-sizing: border-box;
+	width: 80%;
+	height: 100%;
+	/* border: 1px solid seashell; */
 }
 
 .header{
@@ -23,14 +26,22 @@
 .divHeader{
 	margin-top: 0.3%;
 	display: flex;
-	border: 1px solid rgba(0, 0, 255, 0.267);
+	/* border: 1px solid rgba(0, 0, 255, 0.267); */
 	flex-wrap: wrap; 
 	width: 100%;
 	height: 2%;
 	justify-content: center;
 	align-items: center;
 	box-sizing: border-box;
-	box-shadow: 2px 2px 10px 2px rgba(226, 3, 96, 0.671);
+	/* box-shadow: 2px 2px 10px 2px rgba(226, 3, 96, 0.671); */
+}
+
+.loadingHome{
+	font-size: 100px;
+	justify-content: center;
+	align-items: center;
+	font-weight: bold;
+	text-shadow:  3px 2px 10px rgb(234, 0, 255);
 }
 
 .divTittle{
@@ -41,7 +52,7 @@
 	/* border: 1px solid salmon; */
 	box-sizing: border-box;
 	text-align: left;
-	text-shadow:  3px 2px 2px rgba(0, 247, 255, 0.486);
+	text-shadow:  3px 2px 10px rgb(234, 0, 255);
 	padding-left: 5%;
 	letter-spacing: 8px;
 }
@@ -51,25 +62,32 @@
 }
 
 .divAddButton{
-	background-color: transparent;
+	/* background-color: rgba(0, 0, 0, 0.582); */
 	color: azure;
 	border-radius: 5px;
 	width: auto;
-	border: 1px solid rgb(255, 255, 255);
+	border: 2px solid rgb(234, 6, 255);
 	box-sizing: border-box;
 	font-size: 120%;
 	display: flex;
 	float: right;
 	justify-content: center;
 	margin-right: 10%;
+	padding: 2%;
+	background-image: url(../../image/neonadd.gif);
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: 100% 100%;
+	cursor: pointer;
 }
 
 .divAddButton:hover{
 	font-weight: bold;
 	width: auto;
-	color: black;
-	border-color: black;
-	background-color: yellow;
+	color: rgb(255, 255, 255);
+	border-color: rgb(255, 255, 255);
+	cursor: pointer;
 }
 
 .divRefresh{
@@ -82,11 +100,13 @@
 	background-color: transparent;
 	color: azure;
 	border-color: transparent;
+	text-shadow:  3px 2px 10px rgb(234, 0, 255);
 }
 
 .divRefresh:hover{
-	color: yellow;
 	font-weight: bold;
+	text-shadow:  3px 2px 10px rgb(234, 0, 255);
+	font-size: 15px;
 }
 
 .link{
