--- a/client/src/components/LandingPage/LandingPage.css
+++ b/client/src/components/LandingPage/LandingPage.css
@@ -1,18 +1,35 @@
 .tittle{
 	font-size: 60px;
+	display: flex;
+	margin-left: 5%;
+	align-items: left;
+	justify-content: left;
+	font-weight: bold;
+	text-shadow: 2px 2px 2px blue;
+	letter-spacing: 5px;
 }
 
 .start{
-	color: black;
+	color: rgb(255, 255, 255);
 	font-size: 35px;
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 	text-decoration: none;
 	font-weight: bold;
-	border-radius: 15%;
+	border-radius: 5%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  float: right;
+	width: 20%;
+	margin-right: 10%;
+	margin-top: 10%;
+	border: 1px solid blue;
+	box-shadow: 2px 2px 15px rgb(255, 0, 170);
+	background-color: rgba(0, 0, 0, 0.829);
 }
 
 .start:hover{
 	color: white;
 	background-color: black;
-
+	cursor: pointer;
 }
