--- a/client/src/components/SearchBar/SearchBar.css
+++ b/client/src/components/SearchBar/SearchBar.css
@@ -2,24 +2,25 @@
     width: 500px;
     height: 30px;
     border-radius: 5px 0px 0px 5px;
-    background-color: rgba(97, 96, 96, 0.349);
+    background-color: rgba(51, 49, 49, 0.63);
     color: white;
-    /* box-shadow: 1px 1px 1px 2px rgba(255, 255, 0, 0.548); */
+    box-shadow: 1px 1px 8px rgb(247, 0, 255);
     font-size: 18px;
     font-family: 'Courier New', Courier, monospace;
+    border: 1px solid rgba(255, 0, 0, 0.39);
 }
 
 .buttonSearch{
     width: 100px;
     height: 37px;
-    background-color: rgba(97, 96, 96, 0.829);
+    background-color: rgba(0, 0, 0, 0.877);
     color: azure;
     font-size: 18px;
     font-family: 'Courier New', Courier, monospace;
-    box-shadow: 0px 0px 0px 2px rgba(255, 255, 0, 0.548);
-    border-color: none;
+    box-shadow: 1px 1px 8px rgb(247, 0, 255);
     border-radius: 5px;
     cursor: pointer;
+    border: 1px solid rgba(255, 0, 0, 0.39);
 }
 
 .buttonSearch :hover{
