--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,3 +45,37 @@
     transform: rotate(360deg);
   }
 }
+
+
+/* RESPONSIVE DESING */
+
+/* Pantallas muy grandes (Computadoras) */
+
+@media (max-width: 1200px){
+
+}
+
+/* Pantallas grandes (Computadoras) */
+@media (max-width: 992px){
+  
+}
+
+/* Pantallas dispositivos medianos (Tablets) */
+@media (max-width: 768px){
+  
+}
+
+/* Pantallas dispositivos pequeños  (Telefonos) */
+@media (max-width: 576px){
+  .App {
+    text-align: center;
+    background-image: url(./image/landingmobile.jpg);
+    overflow: hidden;
+    min-height: 100vh;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+    color: azure;
+    font-family:'Courier New', Courier, monospace;
+  }
+}
