--- a/client/src/components/CreateVideogame/CreateVideogame.css
+++ b/client/src/components/CreateVideogame/CreateVideogame.css
@@ -282,3 +282,28 @@
     box-sizing: border-box;
 
 }
+
+/* Pantallas dispositivos pequeños  (Telefonos) */
+@media (max-width: 576px){
+    .divNew{
+        /* border: 1px solid rgb(0, 255, 42); */
+        width: 100%;
+        height: 50%;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        margin-top: 5%;
+    }
+    .divAddAll{
+        border: 1px solid rgb(55, 0, 255);
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        margin: 10% 10% 1% 10%;
+        height: 60%;
+        background-color: rgba(0, 0, 0, 0.918);
+        border-radius: 2%;
+        box-shadow: 2px 2px 10px 2px rgba(226, 3, 96, 0.671);
+    }
+}
