--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -18,11 +18,6 @@
 	/* border: 1px solid seashell; */
 }
 
-.header{
-	/* border: 1px solid rgb(255, 0, 0); */
-}
-
-
 .divHeader{
 	margin-top: 0.3%;
 	display: flex;
@@ -37,7 +32,7 @@
 }
 
 .loadingHome{
-	font-size: 100px;
+	font-size: 400%;
 	justify-content: center;
 	align-items: center;
 	font-weight: bold;
@@ -126,11 +121,11 @@
 	box-shadow: 2px 2px 2px  rgba(226, 3, 189, 0.74);
 }
 
-.divGames{
+/* .divGames{
 	width: 85%;
 	float: right;
 	left: 2%;
-}
+} */
 
 .selects{
 	background-color: transparent;
@@ -169,4 +164,99 @@
 	background-color:rgba(0, 0, 0, 0.877);
 	color: white;
 	text-shadow:  2px 0px 10px rgb(255, 0, 179);
+}
+
+/* Pantallas grandes (Computadoras) */
+@media (max-width: 992px){
+  
+}
+
+/* Pantallas dispositivos medianos (Tablets) */
+@media (max-width: 768px){
+  
+}
+
+/* Pantallas dispositivos pequeños  (Telefonos) */
+@media (max-width: 576px){
+  .divTittle{
+		width: auto;
+		margin: 0%;
+		font-size: 100%;
+	}
+	.divHeader{
+		width: 100%;
+	}
+	.divAdd{
+		width: 15%;
+		font-size: 50%;
+		margin-bottom: 2%;
+	}
+	.divAddButton{
+		width: 98%;
+		height: 50%;
+		margin:5% 1% 0% 1%;
+		font-weight: bold;
+		border-radius: 20%;
+	}
+
+	.divOption{
+		display: flex;
+		margin: 0% 10% 0% 10%; 
+		width: 80%;
+		height: 20px;
+		background-color: transparent;
+		border: transparent;
+		box-shadow: none;
+
+	}
+	.h3Select{
+		display: none;
+	}
+	.h5Option{
+		display: none;
+	}
+	.divVideogame{
+		display: flex;
+		width: 100%;
+		margin-right: 0%;
+		justify-content: space-evenly;
+	}
+	.divRefresh{
+		width: 9%;
+		display: flex;
+		position: absolute;
+		left: 10px;
+		top: 5px;
+		border: 1px solid white;
+		border-radius: 5px;
+		font-size: 50%;
+		background-color: transparent;
+		color: azure;
+		/* border-color: transparent; */
+		text-shadow:  3px 2px 10px rgb(234, 0, 255);
+	}
+	.optionAll{	
+		background-color:rgba(0, 0, 0, 0.877);
+		color: white;
+		text-shadow:  2px 0px 10px rgb(255, 0, 179);
+		width: 50%;
+	}
+	.selects{
+		background-color: transparent;
+		color: white;
+		font-family: 'Courier New', Courier, monospace;
+		font-size: 70%;
+		height: auto;
+		border-radius: 10%;
+		text-shadow:  2px 0px 10px rgb(255, 0, 106);
+	}
+	.divHome{
+		background-image: url(../../image/mobileopcion.jpg);
+		overflow: hidden;
+		min-height: 100vh;
+		background-repeat: no-repeat;
+		background-attachment: fixed;
+		background-size: 100%  100%
+	}
+	
 }
