--- a/client/src/components/LandingPage/LandingPage.css
+++ b/client/src/components/LandingPage/LandingPage.css
@@ -1,5 +1,5 @@
 .tittle{
-	font-size: 60px;
+	font-size: 350%;
 	display: flex;
 	margin-left: 5%;
 	align-items: left;
@@ -32,4 +32,25 @@
 	color: white;
 	background-color: black;
 	cursor: pointer;
+}
+
+/* Pantallas dispositivos pequeños  (Telefonos) */
+@media (max-width: 576px){
+  .start{
+		width: 80%;
+		margin-top: 80%;
+	}
+	.tittle{
+		width: auto;
+		height: auto;
+		font-size: auto;
+		display: flex;
+		justify-items: auto;
+		margin-left: 0%;
+		align-items: center;
+		justify-content: center;
+		font-weight: bold;
+		text-shadow: 2px 2px 2px blue;
+		letter-spacing: 5%;
+	}
 }
