--- a/client/src/components/Paged/Paged.css
+++ b/client/src/components/Paged/Paged.css
@@ -1,13 +1,48 @@
 .paged{
-    margin: 7px;
+    margin-left: 0.75%;
+    margin-right: 0.75%;
     font-family: 'Courier New', Courier, monospace;
     cursor: pointer;
-    font-size: 18px;
     font-weight: bold;
-    left: 50%;
-    height: 50px;
+    height: auto;
+}
+
+.divPaged{
+    margin-top: 2%;
 }
 
 .paged:hover{
-    color: yellow;
+    color:rgb(204, 0, 255);
+}
+
+.paged:active{
+    color:rgb(204, 0, 255);
+    font-size: 100%;
+}
+
+/* Pantallas grandes (Computadoras) */
+@media (max-width: 992px){
+
+}
+
+/* Pantallas dispositivos medianos (Tablets) */
+@media (max-width: 768px){
+
+}
+
+/* Pantallas dispositivos pequeños  (Telefonos) */
+@media (max-width: 576px){
+    .paged{
+        box-sizing: border-box;
+    }
+    .divPaged{
+        display: flex;
+        width: 100%;
+        height: auto;
+        box-sizing: border-box;
+        margin: 5% 0% 5% 0%;
+        justify-content: center;
+        align-items: center;
+        font-size: 80%;
+    }
 }
