--- a/client/src/components/SearchBar/SearchBar.css
+++ b/client/src/components/SearchBar/SearchBar.css
@@ -23,6 +23,26 @@
     border: 1px solid rgba(255, 0, 0, 0.39);
 }
 
-.buttonSearch :hover{
-    
+/* Pantallas grandes (Computadoras) */
+@media (max-width: 992px){
+  
+}
+
+/* Pantallas dispositivos medianos (Tablets) */
+@media (max-width: 768px){
+  
+}
+
+/* Pantallas dispositivos pequeños  (Telefonos) */
+@media (max-width: 576px){
+    .inputSearch{
+        width: 60%;
+        height: 10%;
+        font-size: 80%;
+    }
+    .buttonSearch{
+        width: 15%;
+        height: 15%;
+        font-size: 80%;
+    }
 }
